--- a/index.njk
+++ b/index.njk
@@ -40,7 +40,7 @@
         </table>
       </section>
       <section class="text">
-      <p>At the end of 2020 the <a href="https://www.nvidia.com/en-us/geforce/graphics-cards/30-series/">GeForce RTX 3000 series</a> launched with very good reviews. Unfortunately, you <em>can't buy them...</em></p>
+      <p>At the end of 2020 the <a href="https://www.nvidia.com/en-us/geforce/graphics-cards/30-series/">GeForce RTX 3000 series</a> launched with very good reviews. Unfortunately, you <em>can't buy them…</em></p>
       {# <p>The great GPU shortage of 2020 (and 2021). The reason for this shortage can be summarized in the following points all hitting at the same time:</p>
       <ul>
         <li>Better than expected performance improvements for GPUs</li>
@@ -50,16 +50,16 @@
         <li>Scalpers using bots to buy products and resell with high margins</li>
       </ul> #}
       <p>
-To get a better overview of the situation this sites regularly pulls the recent sold auctions from <a href="ebay.com">eBay</a>. 
+To get a better overview of the situation this site regularly pulls the recently sold auctions from <a href="ebay.com">eBay</a>. 
 Some (very simple) maths later you get these beautiful charts.
       </p>
       <p>
 The idea is that as long the price is increasing or stable, production is still unable to meet the demand. 
-Hopefully at some point prices will start to come down once the tippy top of the market has been satisfied.
-Once this happens prices will begin to fall and new groups of buyers will get a chance. Eventually the price should come down to the MSRP and allow everybody (finally) buy at a <em>reasonable price</em>.
+Hopefully at some point prices will start to come down once the tippy-top of the market has been satisfied.
+Once this happens prices will begin to fall and new groups of buyers will get a chance. Eventually, the price should come down to the MSRP and allow everybody (finally) to buy at a <em>reasonable price</em>.
       </p>
       <p>
-Unfortunately, at the time of creating this site there is <em>no end in sight...</em>
+Unfortunately, at the time of creating this site, there is <em>no end in sight…</em>
       </p>
       </section>
       <section id="chart-container" style="position: relative; height:40vh; width:90vw; max-width: 1254px; margin: 0 auto; text-align: center;">
