--- a/index.njk
+++ b/index.njk
@@ -25,7 +25,7 @@
       </header>
       <section>
         <table>
-          <caption>Last Updated: <time datetime="2021-04-03" title="April 3rd, 2021">2021-04-03</time></caption>
+          <caption>Last Updated: <time datetime="2021-04-07" title="April 7th, 2021">2021-04-07</time></caption>
           <thead>
             <tr>
               <th>Product</th>
