--- a/index.njk
+++ b/index.njk
@@ -4,14 +4,14 @@
 <head>
   <meta charset="utf-8">
   <title>When will the NVIDIA GPU shortage end?</title>
-  <link rel='stylesheet' href='css/style.css'>
-  <link rel='stylesheet' href='css/reset.css'>
+  <style>
+  {% include "node_modules/normalize.css/normalize.css" %}
+  {% include "css/style.css" %}
+  </style>
   <script data-ad-client="ca-pub-5717136270400903" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.3/dist/Chart.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/moment@2.29.1/moment.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/chartjs-adapter-moment@0.1.2/dist/chartjs-adapter-moment.min.js"></script>
-  <script src="js/utils.js"></script>
-  <script src="js/chart.js"></script>
 </head>
 
 <body>
@@ -66,6 +66,10 @@ Unfortunately, at the time of creating this site, there is <em>no end in sightâ€
       </section>
     </article>
   </main>
+  <script>
+  {% include "js/chart.js" %}
+  {% include "js/utils.js" %}
+  </script>
   <script>
     Chart.pluginService.register(horizonalLinePlugin);
 
