--- a/index.njk
+++ b/index.njk
@@ -22,7 +22,6 @@
   <script src="https://cdn.jsdelivr.net/npm/moment@2.29.1/moment.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/chartjs-adapter-moment@0.1.2/dist/chartjs-adapter-moment.min.js"></script>
 </head>
-
 <body>
   <main>
     <article>
@@ -71,18 +70,7 @@ Once this happens prices will begin to fall and new groups of buyers will get a 
 Unfortunately, at the time of creating this site, there is <em>no end in sight…</em>
       </p>
       </section>
-      <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- gpu-1 -->
-<ins class="adsbygoogle"
-     style="display:block"
-     data-ad-client="ca-pub-5717136270400903"
-     data-ad-slot="6317134716"
-     data-ad-format="auto"
-     data-full-width-responsive="true"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
-      <section id="chart-container" style="position: relative; height:40vh; width:90vw; max-width: 1254px; margin: 0 auto; text-align: center;">
+      <section class="charts" id="chart-container">
       </section>
     </article>
   </main>
