--- a/css/style.css
+++ b/css/style.css
@@ -32,18 +32,18 @@ h1 {
 .byline a:hover {
   text-decoration: none;
 }
-h3 {
+h2 {
   font-weight: 700;
-  font-size: 16px;
+  font-size: 20px;
   margin-top: 5em;
   margin-bottom:0.5em;
 }
-h4 {
-  font-size: 13px;
+h3 {
+  font-size: 16px;
   line-height: 1;
   margin-top:0;
   font-weight: 100;
-  color: #999999;
+  color: #767676;
 }
 em {
   font-weight: 600;
@@ -56,6 +56,7 @@ main {
 table {
   font-variant-numeric: lining-nums tabular-nums;
   margin: 36px auto;
+  font-size: 16px;
   border-collapse: collapse;
   border-spacing: 0;
   border-top: 1px solid #bfbfbf;
@@ -64,21 +65,20 @@ table {
 caption { 
   margin-top: 10px;
   caption-side: bottom;
-  font-size: 13px;
+  font-size: 0.8125em;
   line-height: 1.3;
   font-weight: 100;
-  color: #999999;
+  color: #767676;
 }
 table tbody tr:nth-child(2n+1) {
   background-color: #eee;
 }
 th {
-  font-size: 18px;
+  font-size: 1.125em;
 }
 td, th {
-  padding: 0.125em 0.5em 0.25em 0.5em;
-  line-height: 22px;
-  padding: 12px 9px;
+  line-height: 1.375;
+  padding: 0.75em 0.5625em;
 }
 th:nth-child(1), td:nth-child(1) { 
   text-align: left; 
@@ -98,7 +98,12 @@ th:nth-child(5), td:nth-child(5) {
 td:nth-child(5) {
   font-family: Consolas, monaco, monospace;
   font-weight: 900;
-  font-size: 24px;
+  font-size: 1.5em;
+}
+@media screen and (max-width: 400px) {
+  table {
+    font-size: 12px;
+  }
 }
 section.text {
   max-width: 600px;
